--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "axios": "1.8.4",
-    "tailwindcss": "4.1.3",
-    "postcss": "8.5.3",
-    "autoprefixer": "10.4.21"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "axios": "^1.6.2",
+    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +30,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "resolutions": {
+    "typescript": "^4.9.5"
+  }
 }
