--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "tailwindcss": "^3.3.5",
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16"
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
