--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^1.6.2",
     "tailwindcss": "^3.3.5",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0"
   },
